# csiro2025-ray03j

./: .env.sample  .gitignore  README.md  compose.yml  pyproject.toml
notebook/: csiro-simple-exp1-inference_first_sub.ipynb  csiro-simple-exp10-inference-localmamba.ipynb  csiro-simple-exp5-inference.ipynb
src/: config.yaml  datamodule.py  dataset.py  loss.py  metric.py  model.py  pl_module.py  timmEncoder.py  util.py
